<resources>
    <string name="app_name">Netflix</string>
    <string name="Comments">Comentários</string>
    <string name="volume">Volume</string>
    <string name="favorite">Favoritos</string>
    <string name="content">Conteúdo</string>
    <string name="seekbar_description">Barra de progresso do filme</string>
    <string name="return_button_description">Botão de voltar segundos do vídeo</string>
    <string name="play_button_description">Botão de iniciar o vídeo</string>
    <string name="pause_button_description">Botão de pausar o vídeo</string>
    <string name="banner_description">Cartaz da série</string>
</resources>
